# eecs485-p5

./: .gitignore  chatdoc.md  requirements.txt
index_server/: pyproject.toml
index_server/index/: __init__.py  pagerank.out
index_server/index/api/: __init__.py  main.py
index_server/index/inverted_index/: inverted_index_1.txt
inverted_index/: map0.py  map1.py  map2.py  map3.py  map4.py  map5.py  partition.py  pipeline.sh  reduce0.py  reduce1.py  reduce2.py  reduce3.py  reduce4.py  reduce5.py
inverted_index/crawl/: 00035015.html  00051163.html  00074285.html  00078166.html  00079920.html  00101420.html  00103064.html  00111573.html  00121099.html  00153532.html  00193290.html  00207580.html  00263504.html  00266386.html  00278432.html  00305091.html  00306573.html  00350748.html  00354535.html  00354708.html  00370027.html  00418229.html  00451042.html  00466255.html  00469059.html  00488973.html  00581737.html  00607399.html  00624246.html  00626076.html  00640638.html  00641009.html  00727912.html  00738031.html  00774444.html  00793566.html  00848890.html  00858122.html  00898651.html  00901533.html  (+3022 more)
inverted_index/example_crawl/: 44664014.html  78661573.html
inverted_index/output1/: part-00000  part-00001
inverted_index/output2/: part-00000  part-00001  part-00002  part-00003
inverted_index/output3/: part-00000  part-00001  part-00002  part-00003
search_server/: pyproject.toml
tests/: index_fixtures.py  search_fixtures.py  test_index_server_public.py  test_pipeline_public.py  test_scripts.py  test_search_server_public.py  test_submission_files.py
(+39 files in other folders)
