[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "index"
version = "1.0.0"
dependencies = [
    "Flask",
    "numpy",
    "pdbp",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "requests",
]
requires-python = ">=3.12"

[tool.pylint."messages control"]
disable = ["cyclic-import"]
